# GB_Packers

./: .gitignore  .pre-commit-config.yaml  README.md  code_check.sh  packers_schedule_2024.csv  packers_stats.py  parse_schedule.py  pyproject.toml  scrape_stats.py  setup.cfg
.github/: dependabot.yaml
.github/workflows/: dependabot_merge.yaml  main.yaml
csv_files/: packers_passing_stats_2023.csv  packers_passing_stats_2024.csv  packers_schedule_2024.csv  packers_team_stats_{year}.csv
src/: nfl_stats.py  parse_schedule.py  scrape_stats.py
tests/: test_parse_schedule.py  test_schedule.csv
