[tool.poetry]
name = "gb-packers"
version = "0.1.0"
description = "Tool to output the Green Bay Packers schedule, stats coming soon!"
authors = ["JoshWilbur"]
readme = "README.md"

[[tool.poetry.source]]
name = "public_pypi"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
flake8 = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
